Fixed nav on mobile

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -85,10 +85,12 @@ header {
 	z-index: 10;
 	a {
 		color: $white;
+		font-size: 2em;
 	}
 	.navbtns {
 		a {
 			margin: 0 1em;
+			font-size: 1em;
 		}
 	}
 }
@@ -313,6 +315,12 @@ footer {
 }
 
 @media (max-width: 850px) {
+	.nav {
+		flex-direction: column;
+		.navbtns {
+			margin-top: 1em;
+		}
+	}
 	.section1 {
 		height: 200vh;
 	}
